tests/rosetta/transpiler/Zig/averages-median-3.error
run: exit status 1
/workspace/mochi/tests/rosetta/transpiler/Zig/averages-median-3.zig:30:26: error: expected type 'usize', found 'i64'
/workspace/mochi/tests/rosetta/transpiler/Zig/averages-median-3.zig:30:26: note: unsigned 64-bit int cannot represent all possible signed 64-bit values
