tests/rosetta/transpiler/Zig/averages-median-3.zig
// Generated by Mochi Zig transpiler on 2025-08-02 20:29 +0700
const std = @import("std");

fn qsel(a: []f64, k_param: i64) f64 {
    var k_var: i64 = k_param;
    var arr: []f64 = blk: { const tmp = std.heap.page_allocator.alloc(f64, a.len) catch unreachable; @memcpy(tmp, a); break :blk tmp; };
    while (@as(i64, @intCast(arr.len)) > 1) {
        var px: i64 = @mod(_now(), @as(i64, @intCast(arr.len)));
        const pv: f64 = arr[@intCast(px)];
        const last: i64 = @as(i64, @intCast(arr.len)) - 1;
        const tmp: f64 = arr[@intCast(px)];
        arr[@intCast(px)] = arr[@intCast(last)];
        arr[@intCast(last)] = tmp;
        px = 0;
        var i: i64 = 0;
        while (i < last) {
            const v: f64 = arr[@intCast(i)];
            if (v < pv) {
                const tmp2: f64 = arr[@intCast(px)];
                arr[@intCast(px)] = arr[@intCast(i)];
                arr[@intCast(i)] = tmp2;
                px = px + 1;
            }
            i = i + 1;
        }
        if (px == k_var) {
            return pv;
        }
        if (k_var < px) {
            arr = arr[@intCast(0)..@intCast(px)];
        } else {
            const tmp2: f64 = arr[@intCast(px)];
            arr[@intCast(px)] = pv;
            arr[@intCast(last)] = tmp2;
            arr = arr[@intCast(px + 1)..];
            k_var = k_var - (px + 1);
        }
    }
    return arr[@intCast(0)];
}

fn median(list: []f64) f64 {
    const arr: []f64 = blk: { const tmp = std.heap.page_allocator.alloc(f64, list.len) catch unreachable; @memcpy(tmp, list); break :blk tmp; };
    const half: i64 = @divTrunc(@as(i64, @intCast(arr.len)), 2);
    const med: f64 = qsel(arr, half);
    if (@mod(@as(i64, @intCast(arr.len)), 2) == 0) {
        return (med + qsel(arr, half - 1)) / 2.0;
    }
    return med;
}

pub fn main() void {
    {
        const __start = _now();
        std.debug.print("{s}\n", .{_str(median(@constCast(&[_]f64{3.0, 1.0, 4.0, 1.0})[0..]))});
        std.debug.print("{s}\n", .{_str(median(@constCast(&[_]f64{3.0, 1.0, 4.0, 1.0, 5.0})[0..]))});
        const __end = _now();
        const __duration_us: i64 = @divTrunc(@as(i64, @intCast(__end - __start)), 1000);
        const __memory_bytes = _mem();
        std.debug.print("{{\"duration_us\":{d},\"memory_bytes\":{d},\"name\":\"main\"}}\n", .{__duration_us, __memory_bytes});
    }
}

var _now_seed: i64 = 0;
var _now_seeded: bool = false;
fn _now() i64 {
    if (_now_seeded) {
        _now_seed = @mod(_now_seed * 1664525 + 1013904223, 2147483647);
        return _now_seed;
    }
    if (! _now_seeded) {
        if (std.process.getEnvVarOwned(std.heap.page_allocator, "MOCHI_NOW_SEED")) |env_seed| {
            defer std.heap.page_allocator.free(env_seed);
            if (std.fmt.parseInt(i64, env_seed, 10)) |v| {
                _now_seed = v;
                _now_seeded = true;
                _now_seed = @mod(_now_seed * 1664525 + 1013904223, 2147483647);
                return _now_seed;
            } else |_| {}
        } else |_| {}
    }
    return @as(i64, @intCast(std.time.nanoTimestamp()));
}

fn _str(v: anytype) []const u8 {
    if (@TypeOf(v) == f64 or @TypeOf(v) == f32) {
        return std.fmt.allocPrint(std.heap.page_allocator, "{d}", .{v}) catch unreachable;
    }
    return std.fmt.allocPrint(std.heap.page_allocator, "{any}", .{v}) catch unreachable;
}

fn _mem() i64 {
    const path = "/proc/self/statm";
    var f = std.fs.openFileAbsolute(path, .{}) catch return 0;
    defer f.close();
    var buf: [64]u8 = undefined;
    const n = f.readAll(&buf) catch return 0;
    var it = std.mem.tokenize(u8, buf[0..n], " " );
    if (it.next()) |tok| {
        const pages = std.fmt.parseInt(i64, tok, 10) catch return 0;
        return pages * 4096;
    }
    return 0;
}

fn _print(v: []const u8) void {
    std.debug.print("{s}\n", .{v});
}
